# gj_ps_14

./: Cargo.toml  design.html  gj_ps_14.js  index.html  notes.txt
.github/workflows/: build_and_deploy_web.yml  create_release.yml
src/: main.rs
src/camera/: mod.rs
src/game/: actions.rs  card.rs  cards.rs  game.rs  items.rs  mod.rs  player.rs  puzzles.rs  stats.rs  tiles.rs
src/ui/: energy.rs  hand.rs  level_menu.rs  main_menu.rs  mod.rs  resource.rs  result_menu.rs  tooltip.rs
web/: design.html  index.html
